# picowallet

./: .gitignore  .gitmodules  Makefile  PLAN.md  README.md
docs/: H3_SECURE_BSS_REDESIGN.md
firmware/: CMakeLists.txt
firmware/m9/: CMakeLists.txt  README.md  layout.h  m9_errors.c  m9_errors.h  m9_otp.c  m9_otp.h  memmap_nonsecure.ld  memmap_secure.ld  merge_uf2.py  secure_stub.c  trng.c  trng.h  veneers.c
firmware/src/apps/: dialer_test.c  dialer_test.h
firmware/src/apps/cosmos/: app.c  app.h  privval.c  privval.h  sc_driver_cosmos.c  sc_driver_cosmos.h  secret_connection_cosmos.c  secret_connection_cosmos.h
firmware/src/apps/gnoland/: app.c  app.h  gno_privval.c  gno_privval.h  sc_driver.c  sc_driver.h  secret_connection_gno.c  secret_connection_gno.h
firmware/src/os/: api.c  api.h  app_registry.c  app_registry.h  bench.c  bench.h  main.c  mode.c  mode.h  secure_api.h  version.h
firmware/src/os/crypto/: bip39.c  bip39.h  bip39_wordlist.c  bip39_wordlist.h  keccak.c  keccak.h  keystore.c  keystore.h  merlin.c  merlin.h  sha256.c  sha256.h  strobe.c  strobe.h
firmware/src/os/hal/: display.c  display.h  input.c  input.h  usb_console.c  usb_console.h
firmware/src/os/storage/: auth_keys.c  auth_keys.h  chains.c  chains.h  flash_layout.h  hwm_flash.c  hwm_flash.h  seed_flash.c  seed_flash.h  slot_seed.c  slot_seed.h
firmware/src/os/transport/: eth.c  eth.h  host_protocol.c  host_protocol.h  lwipopts.h  secret_connection.c  secret_connection.h  tusb_config.h  usb.c  usb.h  usb_descriptors.c
firmware/src/os/ui/: confirm.c  console.c  console.h  factory_reset.c  factory_reset.h  mode_select.c  mode_select.h  pin_ui.c  pin_ui.h  splash.c  splash.h  splash_image.h
scripts/: README.md  gno_testnet-stop.sh  gno_testnet.sh  picowallet-bridge.py  testnet-stop.sh  testnet.sh
tools/: merlin.py  png_to_header.py  pwctl.py  test_keccak.c  test_merlin.c
